--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -55,7 +55,12 @@ Miljøstasjonen er det mest sentrale spillelementet i Garbage
 Alert. Denne kan bli sett på som hovedbasen i spillet.
 Miljøstasjonen kan oppgraderes på tre måter for å forbedre effektiviteten:\\
 \begin{description}
-	\item \textbf{Volum/Utvinningsgrad}\\Denne oppgraderingen kan øke utvinningsgraden og volumet av søppel som blir brukt i gjennvinningsprosessen. Restavfallet (søppelet som ikke blir gjenvunnet) vil på magisk vis bli borte. Tabell \ref{tab:effektivitet} viser oppgraderingene for Volum/Utvinningsgrad. Man starter på nivå 0, og deretter kan man oppgradere ett trinn ad gangen.
+	\item \textbf{Volum/Utvinningsgrad}\\Denne oppgraderingen kan øke
+utvinningsgraden og volumet av søppel som blir brukt i
+gjennvinningsprosessen. Restavfallet (søppelet som ikke blir gjenvunnet)
+vil på magisk vis bli borte. Tabell \ref{tab:effektivitet} viser
+oppgraderingene for Volum/Utvinningsgrad. Man starter på nivå 0, og
+deretter kan man oppgradere ett trinn ad gangen.
 	\item \textbf{Buffer}\\Miljøstasjonen kan få en buffer hvor spilleren kan samle opp søppel, som automatiserer gjenvinningsprosessen til en viss grad. Dermed kan spilleren bruke mindre tid på å sørge for at søppelet på øyen blir flyttet til miljøstasjonen.
 	\item \textbf{Ressurser}\\For å kunne gjenvinne nye typer ressurser må
 		spilleren oppgradere gjenvinningsstasjonen. Her får spilleren valget
@@ -63,7 +68,7 @@ Miljøstasjonen kan oppgraderes på tre måter for å forbedre effektiviteten:\\
 		tilgang til (se figur \ref{fig:ressursoppgraderinger}).
 \end{description}
 
-\begin{table} \label{tab:effektivitet}
+\begin{table} i
 \begin{tabular}[\textwidth]{ l  l  p{3cm}  l  p{4cm} } %\label{tab:effektivitet}
 \hline
 \bf{Effektivitet} & \bf{Utvinningsgrad} & \bf{Volum} & \bf{Tid} & \bf{Ressurskrav} \\
@@ -75,6 +80,7 @@ Nivå 3 & 30 & 20 & 15sek & Papp, plast, tre, stål, jern og titan \\
 \hline
 \end{tabular}
 \caption{Oppgraderinger for Volum/Utvinningsgrad}
+\label{tab:effektivitet}
 \end{table}
 
 
