--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -5,13 +5,11 @@ medlemmene i gruppen har, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
 
 \subsection{Struktur}
-Dokumentet er i hovedsak strukturert i 4 hoveddeler:
+Dokumentet er i hovedsak strukturert i 3 hoveddeler:
 \begin{enumerate}
-	\item Introduksjon (Avsnitt~\ref{sec:intro})
 	\item Konsept og spillutforming (Avsnitt~\ref{sec:konsept})
 	\item Teknisk (Avsnitt~\ref{sec:teknisk})
 	\item Grafisk fremstilling (Avsnitt~\ref{sec:artwork})
-	\item Resultat (Avsnitt~\ref{sec:conclusion})
 \end{enumerate}
 Konseptdelen gir et innblikk i hvordan konseptet ble unnfanget og hvilke
 valg som lå til grunn for dette. I tillegg gir denne delen en overordnet
@@ -145,4 +143,4 @@ avsnitt~\ref{sec:hazards})
 Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
 Ina har sin bakgrunn bioteknologi fra NTNU, og Andreas' bakgrunn stammer petroleumsgeologi, også fra NTNU.
 Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
-Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har holdt gruppestrukturen så flat som mulig, her ikke dette kommet særlig fram.
+Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har holdt gruppestrukturen så flat som mulig, har ikke dette kommet særlig frem.
