--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -140,7 +140,7 @@ avsnitt~\ref{sec:hazards})
 
 \subsection{Gruppens kompetanse}
 
-Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
-Ina har sin bakgrunn bioteknologi fra NTNU, og Andreas' bakgrunn stammer petroleumsgeologi, også fra NTNU.
+Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning, henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
+Ina har sin bakgrunn i bioteknologi fra NTNU, og Andreas' bakgrunn stammer fra petroleumsgeologi, også fra NTNU.
 Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
-Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har holdt gruppestrukturen så flat som mulig, har ikke dette kommet særlig frem.
+Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har valgt å holde gruppestrukturen så flat som mulig, har ikke dette kommet særlig frem.
