Fixed references to figures/tables.

--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -33,11 +33,11 @@ De forskjellige typene utvinnbare ressurser er:
 Det er også mulig å skade forsvar og våpen som er bygget av en bedre ressurs enn våpenet. Dette er implementert slik at ingen våpen og forsvar blir uovervinnelige. Figur \ref{fig:ressursoppgraderinger} framstiller hvilke utvidelser man må ha for å kunne oppgradere til neste nivå. Allerede helt fra starten av spillet må man velge om man først vil oppgradere til tre eller til plast (se seksjon \ref{miljostasjon}). 
 
 \begin{figure} [H]
-	\label{fig:ressursoppgraderinger}
 	\begin{center}
 	\includegraphics[scale=0.5]{images/oppgraderingstre}
 	\end{center}
 	\caption{Ressursoppgraderinger}
+	\label{fig:ressursoppgraderinger}
 \end{figure}
 
 \subsubsection{Ressursutvinning}
@@ -53,7 +53,12 @@ Miljøstasjonen kan oppgraderes på tre måter for å forbedre effektiviteten:
 
 \begin{description}
 	\item \textbf{Volum/Utvinningsgrad}\\
-		Denne oppgraderingen kan øke utvinningsgraden og volumet av søppel som blir brukt i gjennvinningsprosessen. Restavfallet (søppelet som ikke blir gjenvunnet) vil på magisk vis bli borte. Tabell \ref{tab:effektivitet} viser oppgraderingene for Volum/Utvinningsgrad. Man starter på nivå 0, og deretter kan man oppgradere ett trinn ad gangen.
+		Denne oppgraderingen kan øke utvinningsgraden og volumet av
+søppel som blir brukt i gjennvinningsprosessen. Restavfallet (søppelet
+som ikke blir gjenvunnet) vil på magisk vis bli borte. Tabell
+\ref{tab:effektivitet} viser oppgraderingene for Volum/Utvinningsgrad.
+Man starter på nivå 0, og deretter kan man oppgradere ett trinn av
+gangen.
 	\item \textbf{Buffer}\\
 		Miljøstasjonen kan få en buffer hvor spilleren kan samle opp søppel, som automatiserer gjenvinningsprosessen til en viss grad. Dermed kan spilleren bruke mindre tid på å sørge for at søppelet på øya blir flyttet til miljøstasjonen.
 	\item \textbf{Ressurser}\\
@@ -71,8 +76,8 @@ Miljøstasjonen kan oppgraderes på tre måter for å forbedre effektiviteten:
 		Nivå 3 & 30 & 20 & 15sek & Papp, plast, tre, stål, jern og titan \\
 		\hline
 	\end{tabular}
-	\label{tab:effektivitet}
 	\caption{Oppgraderinger for Volum/Utvinningsgrad}
+	\label{tab:effektivitet}
 \end{table}
 
 
