--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -104,7 +104,7 @@ Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar e
 
 
 \subsubsection{Priser, helsepoeng og angrepsverdier}
-Under utviklingen og alfa-testingen av spillet har Re3 kommet frem til en prisliste, helsepoeng på våpen, mur og miljøstasjon samt attack-verdier for våpnene.
+Under utviklingen og alfa-testingen av spillet har Re³ kommet frem til en prisliste, helsepoeng på våpen, mur og miljøstasjon samt attack-verdier for våpnene.
 
 Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger koster noe papp, osv, for at denne ressursen ikke hoper seg opp. Utkastet av prislisten finnes i appendiks \ref{A}.
 
