--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -5,17 +5,18 @@ medlemmene i gruppen har, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
 
 \subsection{Struktur}
-Dokumentet er i hovedsak strukturert i 3 hoveddeler:
+Dokumentet er i hovedsak strukturert i 3 deler:
 \begin{enumerate}
 	\item Konsept og spillutforming (Avsnitt~\ref{sec:konsept})
 	\item Teknisk (Avsnitt~\ref{sec:teknisk})
 	\item Grafisk fremstilling (Avsnitt~\ref{sec:artwork})
 \end{enumerate}
-Konseptdelen gir et innblikk i hvordan konseptet ble unnfanget og hvilke
+Konsept og spillutforming gir et innblikk i hvordan konseptet ble unnfanget og hvilke
 valg som lå til grunn for dette. I tillegg gir denne delen en overordnet
 forståelse om hva spillet handler om, og går ut på.
 
-Teknisk gir innsikt i selve implementasjonen av prototypen.
+Teknisk del gir innsikt i selve implementasjonen av prototypen, og grafisk fremstilling
+gir en enkel illustrasjon av spillet.
 
 \subsection{Gruppemedlemmene}
 Herunder vil den spillmessige bakgrunnen til hvert gruppemedlem bli
