--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -5,7 +5,7 @@
 %%% Date: February 2011
 
 %%% Preamble
-\documentclass[12pt,a4paper]{scrartcl}	% Article class of KOMA-script with 11pt font and a4 format
+\documentclass[12pt,a4paper,twoside]{scrartcl}	% Article class of KOMA-script with 11pt font and a4 format
 \usepackage[english]{babel}														% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
 \usepackage{amsmath,amsfonts,amsthm}										% Math packages
@@ -72,11 +72,14 @@
 \include{intro}
 \include{problem}
 \include{process}
+\cleardoublepage
 \include{concept}
 \include{spillutforming}
+\cleardoublepage
 \include{tech}
+\cleardoublepage
 \include{artwork}
-\include{avsluttning}
+\cleardoublepage
 \include{conclusion}
 \thispagestyle{empty}
 \bibliographystyle{plain}
