--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -214,8 +214,7 @@ sin. Desse oppgraderingene baserer seg på statusen til miljøstasjonen.
 % player can use the object.
 \subsection{Spillkonsekvenser}
 Dette delkapittelet forteller om de forskjellige negative og positive
-konsekvensene en spiller kan og vil oppleve gjennom spillets gang. Disse konsekvensene har som hensikt å underbygge …
-, som et ledd i å hjelpe spilleren til å forstå hva en gjør som er riktig, og hva en gjør som er galt.
+konsekvensene en spiller kan og vil oppleve gjennom spillets gang. Disse konsekvensene har som hensikt å underbygge landsbyens overordnede tema, som et ledd i å hjelpe spilleren til å forstå hva en gjør som er riktig, og hva en gjør som er galt.
 
 Gjennom å oppgradere miljøstasjonen og dermed kunne bedre håndtere søpla på øya vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når spilleren oppgraderer utstyr eller utfører et vellykket angrep mot sine
 motstandere. Dette skal skaper en positiv mestringsfølelse hos spilleren. 
