--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -114,8 +114,7 @@ Som datastudenter med programmeringserfaring er det alltid en overhengende fare 
 
 
 Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte med andre ord å dra nytte av synergieffektene som kommer av vår ulikheter.
-
-
+\cleardoublepage
 
 \section{De Bonos hatter} %gruppelogg 14.03
 14. mars hadde alle gruppene i landsbyen en midtveispresentasjon av
@@ -225,11 +224,28 @@ Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan 
 %Vi bestemte oss for å ta en gjennomgang av hele prosjektet vårt en måned frem i tid ved bruk av De Bonos hatter. %Dermed sikrer vi oss at alle aspekter blir tatt opp, og om det er noe vi kan endre/forbedre før vi sier oss fornøyde. Det er %også viktig at alle på gruppen får være de forskjellige hattene, til og med de rollene man ikke liker. Det er for eksempel %viktig at Ina og Kjetil tar på seg rollen som den kritiske. De andre på gruppen er ofte kritiske, men Ina og Kjetil sitter %kanskje inne med kritikk de ikke vil ta opp som kan være avgjørende for prosjektets ferdigstilling. 
 
 
-\section{Person-Gruppe Relasjon} %SPGR-øvelsen 21.03
-\label{sec:SPGR}
-Den 21. mars bestemte gruppen seg for å gjennomføre en SPGR- test (Systematisere Person-Gruppe Relasjonen). Det var tidlig på morgenen, og gruppemedlemmene hadde nettopp fått en kopp kaffe. Produktiviteten var lav, og muligheten til å kvikne til med en gruppeøvelse var forlokkende. Hensikten med denne øvelsen var å se på hvilke typer adferd som fant sted i gruppen, gitt en bestemt situasjon. 
 
-Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville analysere. Generelt har det ikke vært noen store konflikter innad i gruppen, men det var to situasjoner som pekte seg ut som mer konfliktfulle enn andre. Den første situasjonen var valg av konsept, mens den andre situasjonen var en beslutning på om det endelige konseptet skulle spilles i sanntid eller om det skulle være turbasert. Den sistnevnte situasjonen ble valgt, da det var enighet om at det var gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle være turbasert, mens de andre gruppemedlemmene så for seg at spillet skulle spilles i sanntid. Andreas var redd for at dette var et dårlig valg av situasjon, ettersom Trond stod alene mot resten av gruppen. Men Trond syntes det var ok. Resultatet kunne bli interessant.
+\cleardoublepage
+\section{Person-Gruppe Relasjon}\label{sec:SPGR}
+Den 21. mars bestemte gruppen seg for å gjennomføre en SPGR- test
+(Systematisere Person-Gruppe Relasjonen). Det var tidlig på morgenen, og
+gruppemedlemmene hadde nettopp fått en kopp kaffe. Produktiviteten var
+lav, og muligheten til å kvikne til med en gruppeøvelse var forlokkende.
+Hensikten med denne øvelsen var å se på hvilke typer adferd som fant
+sted i gruppen, gitt en bestemt situasjon. 
+
+Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville
+analysere. Generelt har det ikke vært noen store konflikter innad i
+gruppen, men det var to situasjoner som pekte seg ut som mer
+konfliktfulle enn andre. Den første situasjonen var valg av konsept,
+mens den andre situasjonen var en beslutning på om det endelige
+konseptet skulle spilles i sanntid eller om det skulle være turbasert.
+Den sistnevnte situasjonen ble valgt, da det var enighet om at det var
+gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle
+være turbasert, mens de andre gruppemedlemmene så for seg at spillet
+skulle spilles i sanntid. Andreas var redd for at dette var et dårlig
+valg av situasjon, ettersom Trond stod alene mot resten av gruppen. Men
+Trond syntes det var ok. Resultatet kunne bli interessant.
 
 Etter at en situasjon var valgt, ble hver enkelt deltaker gitt 5
 minutter til å kartlegge sin egen adferd i den gitte situasjonen,
@@ -240,7 +256,7 @@ hvor hver enkelt deltaker delte hvordan en så på sin egen adferd,
 etterfulgt av hvordan hver av de andre medlemmene hadde oppfattet denne
 personens adferd.
 
-\begin{figure} [H]
+\begin{figure}
 		\begin{center}
 			\includegraphics[scale=0.5]{spgr}
 		\end{center}
