andreas har korrekturlest prosessrapport og endret abstrakt

--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -46,8 +46,12 @@ Trondheimsbaserte. Videre har det vært muligheter for å delta på
 samt å stille ut produkt og konsept på Technoport 2012 i forbindelse med
 \emph{Mission Rio}-prosjektet.
 
-\subsection{Problemstilling} Vår problemstilling for prosjektet har
-blitt definert som \emph{"\input{../problemstilling}"}. Ut fra denne
+\subsection{Problemstilling} Gruppens problemstilling for prosjektet er
+definert som følger:
+\begin{quotation}
+\emph{"\input{../problemstilling}"}
+\end{quotation}
+ Ut fra denne
 problemstillingen ledet vi ut et konsept vi har valgt å kalle
 \emph{Garbage Alert}, et spill hvor målet er å (passivt) samle inn
 søppel og avfall for gjenbruk til mer nyttige ting. Prosjektet var ikke
@@ -56,5 +60,5 @@ skape en enkel prototype, for å hjelpe visualiseringen av prosjektet.
 Gjennom å raskt få ferdig noe som vi faktisk kunne prøve ville vi kunne
 fastslå hva som fungerer bra og hva som fungerer dårlig, og dermed
 videreutvikle konseptet. Måten vi arbeidet sammen og gjorde avgjørelser på
-reflekterer dette valget – vi har ikke vært redde for å utforske
-alternative løsninger på problemstillingen.
+reflekterer dette valget. Vi har ikke vært redde for å utforske
+alternative løsninger på problemstillingen underveis.
