--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -2,28 +2,28 @@
 Da \emph{''En spillverden på ett semester''} dreier seg om det å skape
 og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv
 for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte
-dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
+dette da tre av gruppens fem medlemmer har datafaglig bakgrunn.
 
 \subsection{Gruppens medlemmer}\label{sec:members}
 Denne seksjonen presenterer de ulike gruppemedlemmene, deres bakgrunner
-og hvordan gruppen i en tidlig fase opplever hvert medlem.
+og hvordan gruppen i en tidlig fase opplevde hvert medlem.
 	\subsubsection{Andreas Røysland Aarnes}
 	Andreas er 25 år gammel, fra Stavanger og studerer geologi og geofysikk. Han jobber for Det Norske Oljeselskap og driver ellers mye med musikk. Innen spillverdenen er han spesielt interessert i strategispill. EiT for Andreas viste seg å være mye kjekkere enn det han hadde forventet, ettersom han får bruke sine kreative og sosiale sider på nye måter. 
 
-	Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er ivrig og sosial, noe som gir ham en stor innflytelse på gruppen. En av hans svake sider er at hans entusiasme og innflytelse kan ha en negativ innvirkning på gruppens avgjørelser, ettersom han kan virke noe dominerende.
+	Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er ivrig og sosial, noe som gir ham en stor innflytelse på gruppen. En av hans svake sider er at hans entusiasme og innflytelse kan ha en negativ innvirkning på gruppens avgjørelser, ettersom han kan fremstå som noe dominerende.
 
 	\subsubsection{Christian Aleksander Lysne}
-	Christian er 22 år, født og oppvokst i Trondheim. Han studerer prosjektledelse med spesialisering i industriell økonomi, og er tidligere utdannet som dataingeniør. På fritiden spiller Christian basketball og jobber med spillfirmaet sitt, \emph{Peekaboo}. Det er denne spillbakgrunnen som var avgjørende for at Christian valgte denne EiT- landsbyen. Han hadde ikke forventet å lære noe nytt på EiT, men ble positivt overrasket.   
+	Christian er 22 år, født og oppvokst i Trondheim. Han studerer prosjektledelse med spesialisering innen industriell økonomi, og er tidligere utdannet som dataingeniør. På fritiden spiller Christian basketball og jobber med spillfirmaet sitt, \emph{Peekaboo}. Det er denne spillbakgrunnen som var avgjørende for at Christian valgte denne EiT- landsbyen. Han hadde ikke forventet å lære noe nytt på EiT, men ble positivt overrasket.   
 
-	Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres innspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme lenge. Han liker variert arbeid.
+	Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres innspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme over en lengre periode. Han liker variert arbeid.
 
 	\subsubsection{Ina Sander Pedersen}
 	26 år gamle Ina studerer bioteknologi og kommer fra Vadsø. Hun hadde ikke noe erfaring med spillutvikling fra før og valgte denne EiT-landsbyen fordi den hørtes spennende og annerledes ut. I starten var hun ganske skeptisk til EiT, men hun ser nå på dette semesteret som svært nyttig og lærerikt.
 
-	Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av gruppen er enig i. Gruppen synes at Ina er en rolig person som er mer forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og gruppemedlemmene begynner å bli enige, er Ina flink til å kartlegge og få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen synes hun er vennlig og aksepterende.
+	Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av gruppen kan bekrefte. Gruppen synes at Ina er en rolig person som er mer forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og gruppemedlemmene kommer til enighet, er Ina flink til å kartlegge og få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen synes hun er vennlig og aksepterende.
 
 	\subsubsection{Kjetil Mehl}
-	23 år gammel datateknikkstudent fra Rosendal. Han har jobbet en del
+	Kjetil er en 23 år gammel datateknikkstudent fra Rosendal. Han har jobbet en del
 med spill tidligere, både i skolesammenheng og på hobbybasis. Det er
 selve utviklingsprosessen som interesserer Kjetil, og det var dette som
 var motivasjonsfaktoren landsbyvalget.
@@ -42,19 +42,18 @@ var motivasjonsfaktoren landsbyvalget.
 \subsection{Forventninger og ambisjoner}
 De første landsbydagene gikk med til flere diskusjoner om hvilke ambisjoner og forventinger vi hadde til Eksperter i Team, gruppen og ikke minst resultatet. Det var samstemt enighet om at vi ønsker en god karakter i faget.
 
-Kjetil hadde delte meninger om Eksperter i Team, hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen mente at dette kurset var et rent tidssluk og ''svada'', andre sa at det var et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget hans var dog en motivasjonsfaktor. Trond har hatt inntrykket av at en ofte får jobbe med snedige ting i dette faget, men mye av tiden går med til prosessrelaterte ting i stedet for prosjektrelatert arbeid.
+Kjetil hadde delte meninger om Eksperter i Team, hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen mente at dette kurset var et rent tidssluk og ''svada'', andre sa at det var et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget hans var dog en motivasjonsfaktor. Trond hadde inntrykket av at en ofte må jobbe med snedige ting i dette faget, og at mye av tiden går med til prosessrelaterte ting i stedet for prosjektrelatert arbeid.
 
 \subsection{Samarbeidsavtalen}
-Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, og samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å ''straffe'' medlemmer som bryter avtalen. Samarbeidsavtalen er lagt til som vedlegg i appendiks \ref{A}.
+Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, for deretter å samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å ''straffe'' medlemmer som bryter avtalen. Samarbeidsavtalen er lagt til som vedlegg i appendiks \ref{A}.
 
 Arbeidet med å utrede denne avtalen gikk veldig fint, og det var få uenigheter. Dette styrket i alle fall Kjetil sitt inntrykk av at gruppen var veldig samstemt, selv om medlemmene hadde forskjellig studiebakgrunner.
 
-Nedenfor er de viktigste punktene i vår samarbeidsavtale, kort oppsummert.
-% Er kanskje like greit å ta med hele?
+Nedenfor er de viktigste punktene i samarbeidsavtalen kort oppsummert:
 
 \begin{itemize}
 	\item Hovedmomenter: Gruppen skal sette felles mål, og alle skal være klar over disse. Gruppen skal være åpen for at alle skal komme med innspill.
-	\item Møtestruktur: Hver onsdag skal startes ved at alle forteller hva de har gjort siden sist, i tillegg til hva man skal gjøre/har som mål i løpet av dagen. Her er det også viktig å belyse eventuelle problemer en har i plenum med resten av gruppen. Denne fremgangsmåten er sterkt inspirert av Scrum-metodologien\cite{Scrum} for programvareutvikling.
+	\item Møtestruktur: Hver onsdag skal starte med at alle forteller hva de har gjort siden sist, i tillegg til hva man skal gjøre/har som mål i løpet av dagen. Her er det også viktig å belyse eventuelle problemer en har i plenum med resten av gruppen. Denne fremgangsmåten er sterkt inspirert av Scrum-metodologien\cite{Scrum} for programvareutvikling.
 	\item Beslutningsstrategi: Er det noe vi absolutt ikke blir enige om, vil flertallet bestemme. Alle ideer skal dog høres grundig ut og skal helst vedtas enstemmig om det lar seg gjøre.
 \end{itemize}
 
