Removed references in tech

--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -23,11 +23,19 @@ Legg dog merke til at ekstensiv testing av ulike nettlesere og enheter har ikke 
 
 
 \subsection{Audiovisuelt innhold}
-Garbage Alerts visuelle stil er ment å være leken og samtidig oversiktlig, og dets grafiske stil er inspirert av den klassiske spillserien \emph{Advance Wars}\cite{game:advancewars}.
+Garbage Alerts visuelle stil er ment å være leken og samtidig
+oversiktlig, og dets grafiske stil er inspirert av den klassiske
+spillserien Advance Wars.
 
-Spillets introskjerm er ment å være så pompøs og lite subtil som mulig, med store eksplosjoner på en søppelhaug. På denne skjermen spilles et utsnitt av sangen \emph{Hell March}, kjent som tittelmusikken fra Westwoods Red Alert-serie\cite{game:redalert}. Dette for å underbygge det pompøse inntrykket vi ønsker å skape. En ferdig versjon vil inneholde lydeffekter og bakgrunnsmusikk i resten av spillet.
+Spillets introskjerm er ment å være så pompøs og lite subtil som mulig,
+med store eksplosjoner på en søppelhaug. På denne skjermen spilles et
+utsnitt av sangen \emph{Hell March}, kjent som tittelmusikken fra
+Westwoods Red Alert-serie. Dette for å underbygge det pompøse inntrykket
+vi ønsker å skape. En ferdig versjon vil inneholde lydeffekter og
+bakgrunnsmusikk i resten av spillet.
 
-En mer fullstendig utdyping av spillets audiovisuelle innhold finnes i seksjon \ref{sec:ui}.
+En mer fullstendig utdyping av spillets audiovisuelle innhold finnes i
+seksjon \ref{sec:artwork}.
 
 
 
