--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -18,15 +18,15 @@ i Garbage Alert.
 Ressurser er et viktig element i Garbage Alert. Ressursene er det som
 gjør at spillere kan utvikle basen sin, bygge forsvar og utvikle angrep.
 Valget av ressurser er basert på Mohs hardhetsskala av mineraler \cite{mohs}. Mohs hardhetskala er en liste over mineraler i rekkefølge etter absolutt hardhet, laget av geologen Friedrich Mohs. Hvert mineral skal kunne skrape mineralet som står foran på listen. Ressursene i Garbage Alert er dog ikke helt korrekte i forhold til Mohs hardhetsskala. Ideen er at hver de seks ressursene i spillet følger samme regel, nemlig at den ene ressursen er hardere enn den andre og har mulighet til å ødelegge den. 
-De forskjellige typene utvinnbare ressurser er:
+De forskjellige typene gjenvinnbare ressurser er:
 
 \begin{description}
-	\item \textbf{Papp}\\ Denne ressursen kan utvinnest uten å måtte oppgradere miljøstasjonen. Dette er den enkleste ressursen å få fatt i, men skaper kun relativt svake angrep/forsvar.
-	\item \textbf{Plast}\\ Denne ressursen kan man utvinne etter å ha oppgradert hovedbasen én gang.
-	\item \textbf{Tre}\\ Tre kan utvinnest dersom hovedbasen har blitt oppgradert til dette. Tre er på samme oppgraderingsnivå som plast, med andre ord må spilleren velge mellom desse to i begynnelsen. Tre er derimot hardere enn plast i dette spillet.
-	\item \textbf{Jern}\\ Jern er mulig å utvinne dersom spilleren først oppgraderer til tre.
+	\item \textbf{Papp}\\ Denne ressursen kan gjenvinnest uten å måtte oppgradere miljøstasjonen. Dette er den enkleste ressursen å få fatt i, men skaper kun relativt svake angrep/forsvar.
+	\item \textbf{Plast}\\ Denne ressursen kan man gjenvinne etter å ha oppgradert hovedbasen én gang.
+	\item \textbf{Tre}\\ Tre kan gjenvinnest dersom hovedbasen har blitt oppgradert til dette. Tre er på samme oppgraderingsnivå som plast, med andre ord må spilleren velge mellom desse to i begynnelsen. Tre er derimot hardere enn plast i dette spillet.
+	\item \textbf{Jern}\\ Jern er mulig å gjenvinne dersom spilleren først oppgraderer til tre.
 	\item \textbf{Stål}\\ Stål bygger på at spilleren først har oppgradert til plast.
-	\item \textbf{Titan}\\ Titan er den siste ressursen som er mulig å utvinne. For å kunne utvinne titan må spilleren først ha skaffet seg alle utvinningsutvidelsene til hovedbasen.
+	\item \textbf{Titan}\\ Titan er den siste ressursen som er mulig å gjenvinne. For å få tak i denne ressursen må spilleren først ha skaffet seg \emph{alle} gjenvinningsutvidelsene til hovedbasen.
 \end{description}
 
 
