--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -40,7 +40,7 @@ Det er også mulig å skade forsvar og våpen som er bygget av en bedre ressurs 
 	\label{fig:ressursoppgraderinger}
 \end{figure}
 
-\subsubsection{Ressursutvinning}
+\subsubsection{Ressursgjenvinning}
 Spillere skaffer seg ressurser ved å gjenvinne søppel som ligger
 spredt rundt på øya. Dette blir gjort ved hjelp av miljøstasjonen
 som hver spiller starter med. For å aktivisere spilleren må en "fysisk" dra søppel fra øya og over på miljøstasjonen. Denne vil så bruke noe tid på å prosessere søplet og gjenvinne ressurser fra dette.
@@ -52,11 +52,11 @@ Alert. Denne kan bli sett på som hovedbasen i spillet.
 Miljøstasjonen kan oppgraderes på tre måter for å forbedre effektiviteten:
 
 \begin{description}
-	\item \textbf{Volum/Utvinningsgrad}\\
-		Denne oppgraderingen kan øke utvinningsgraden og volumet av
+	\item \textbf{Volum/Gjenvinningsgrad}\\
+		Denne oppgraderingen kan øke gjenvinningsgraden og volumet av
 søppel som blir brukt i gjennvinningsprosessen. Restavfallet (søppelet
 som ikke blir gjenvunnet) vil på magisk vis bli borte. Tabell
-\ref{tab:effektivitet} viser oppgraderingene for Volum/Utvinningsgrad.
+\ref{tab:effektivitet} viser oppgraderingene for Volum/Gjenvinningsgrad.
 Man starter på nivå 0, og deretter kan man oppgradere ett trinn av
 gangen.
 	\item \textbf{Buffer}\\
@@ -68,7 +68,7 @@ gangen.
 \begin{table}
 	\begin{tabular}[\textwidth]{ l  l  p{3cm}  l  p{4cm} }
 		\hline
-		\bf{Effektivitet} & \bf{Utvinningsgrad} & \bf{Volum} & \bf{Tid} & \bf{Ressurskrav} \\
+		\bf{Effektivitet} & \bf{Gjenvinningsgrad} & \bf{Volum} & \bf{Tid} & \bf{Ressurskrav} \\
 		\hline
 		Nivå 0 & 10 & 10 & 15sek & Ingen  \\
 		Nivå 1 & 20 & 10 & 15sek & Papp \\
@@ -76,7 +76,7 @@ gangen.
 		Nivå 3 & 30 & 20 & 15sek & Papp, plast, tre, stål, jern og titan \\
 		\hline
 	\end{tabular}
-	\caption{Oppgraderinger for Volum/Utvinningsgrad}
+	\caption{Oppgraderinger for Volum/Gjenvinningsgrad}
 	\label{tab:effektivitet}
 \end{table}
 
