--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -138,7 +138,7 @@ Et eksempel på en global geologisk katastrofe som kan intreffe er tsunamier. En
 Et resultat av mye forsøpling av øyene og det omringende havet kan være biologiske katastrofer.
 Et eksempel på en global katastrofe som vil ramme samtlige spillere er sur nedbør. Dette vil gi korrosjon av våpen og forsvarsmurer laget av metall og dermed skade disse, samt at planter og trær også vil ta skade og gi øya et trist utseende.
 
-Eksempler på lokale biologiske katastrofer som kan inntreffe er utbrudd av sykdommer på grunn av bakterievekst, som i sin tur gjør at utvinning av ressurser på miljøstasjonen og muligheten for våpenangrep stanser opp for en periode.
+Eksempler på lokale biologiske katastrofer som kan inntreffe er utbrudd av sykdommer på grunn av bakterievekst, som i sin tur gjør at gjenvinning av ressurser på miljøstasjonen og muligheten for våpenangrep stanser opp for en periode.
 
 
 \subsection{Spillatmosfære}
