Added more info to the glossaries.

--- a/konseptdokument/glossaries.tex
+++ b/konseptdokument/glossaries.tex
@@ -1,83 +1,98 @@
 \printglossary[style=list]
 \addcontentsline{toc}{section}{Ordliste}
 \dictentry{SNES}{
-	Super Nintedo Entertainment System, Spillmaskin utgitt av Nintendo i 1992.
+	Super Nintedo Entertainment System, Spillmaskin utgitt av Nintendo i 1992
 }
 \dictentry{Super Mario World}{
-	Plattformspill utgitt av Nintendo til SNES i 1992.
+	Plattformspill utgitt av Nintendo til SNES i 1992
 }
 \dictentry{Nintendo 64}{
-	Spillmaskin utgitt av Nintendo i 1996.
+	Spillmaskin utgitt av Nintendo i 1996
 }
 \dictentry{Banjo Kazooie}{
-	Platformspill til Nintendo 64, utgitt av Rare i 1998.
+	Platformspill til Nintendo 64, utgitt av Rare i 1998
 }
 \dictentry{Legend of Zelda}{
 	Brukt om The Legend of Zelda Ocarina of Time, eventyrspill utgitt
-til Nintedo 64 i 1998.
+til Nintedo 64 i 1998
 }
 \dictentry{Fanboy}{Fanboy er et engelsk begrep som brukes for å beskrive et individ som
 er dedikert til et enkeltobjekt på en emosjonell eller fanatisk måte,
-ofte til et punkt der det kan beskrives som tvangslidelse.
+ofte til et punkt der det kan beskrives som tvangslidelse
 }
 \dictentry{Energispillet}{
-	Et energispill for å lære om energi, miljø og klima.
+	Et energispill for å lære om energi, miljø og klima
 }
 \dictentry{Advance Wars}{
-	Strategispill orginalt utgitt til Game Boy Advance.
+	Strategispill orginalt utgitt til Game Boy Advance
 }
 \dictentry{Rayman}{
-	En serie plattformspill orginalt utgitt og utviklet av Ubisoft.
+	En serie plattformspill orginalt utgitt og utviklet av Ubisoft
 }
 \dictentry{WC3}{
-	Warcraft III, sanntidsstrategispill utgitt av Blizzard i 2002.
+	Warcraft III, sanntidsstrategispill utgitt av Blizzard i 2002
 }
 \dictentry{Gameboy}{
 	Benevnelse brukt om serien av handholdte konsoller utgitt av
-Nintendo.
+Nintendo
 }
 \dictentry{DKC2}{
 	Donkey Kong Country Country 2
 }
 \dictentry{SSBM}{
 	Super Smash Brothers, et slossespill utgitt til, og av Nintendo 64 i
-1999.
+1999
 }
 \dictentry{Diablo 2}{
-	Et hack and slash action-rollespill, utgitt av Blizzard i 2000.
+	Et hack and slash action-rollespill, utgitt av Blizzard i 2000
 }
 \dictentry{Mario 64}{
 	Det første Mariospillet til Nintendo 64, utviklet og utgitt av
-Nintendo i 1996.
+Nintendo i 1996
 }
 \dictentry{Mario Kart}{
-	Mario Kart 64, er et bilspill utviklet av Nintedo og utgitt på
-Nintendo 64 i 1997.
+	Mario Kart er en serie racingspill, med de kjente Nintendo-figurene.
+Det første spillet kom til NES i 1992
 }
 \dictentry{Monkey Island}{
-	Mario Kart 64\\\url{http://www.mariokart64.com/}
+	Monkey Island, en serie med med eventyrspill i pek-og-klikk
+sjangeren. Produsert av LucasArts
 }
 \dictentry{Den lengste reisen}{
-	Mario Kart 64\\\url{http://www.mariokart64.com/}
+	Eventyrspill laget og utgitt av norske Funcom i 1999
 }
 \dictentry{Bastion}{
-	Mario Kart 64\\\url{http://www.mariokart64.com/}
+	Et action-rollespill produsert av selskapet ``independent developer
+Supergiant Games''. Ble sluppet i 2011 til Xbox Arcade
 }
 \dictentry{Civilization}{
-	Mario Kart 64\\\url{http://www.mariokart64.com/}
+	Et turbasert strategispill i utgangspunktet utgitt til DOS i 1991. Ble
+senere en serie og er nå i sin 5. generasjon
 }
 \dictentry{Starcraft}{
-	Mario Kart 64\\\url{http://www.mariokart64.com/}
+	``Real time strategy'' utgitt av Blizzard i 1998. Satt virkelig
+lista for denne typen spill. Det kom en oppfølger i 2010
 }
 \dictentry{C and C}{
-	Command and Conquer, strategispill først utgitt til PC.
+	Command and Conquer, strategispill først utgitt til PC
 }
 \dictentry{Tekken}{
 	Et japansk kampsportspill utviklet av Namco og orginalt gitt ut til
 Playstation
 }
 \dictentry{Wii}{
-	Nintendo Wii, Nintendos nyeste spillkonsoll.
+	Nintendo Wii, Nintendos siste spillkonsoll
+}
+\dictentry{NES}{
+	Nintendo Entertainment System – 8bits spillkonsoll utgitt av
+Nintendo i 1986 (Europa)
+}
+\dictentry{GBA}{
+	En av de håndholdte spillkonsollene utgitt av Nintendo i 2001
+(Europa)
+}
+\dictentry{Xbox}{
+	En serie spillkonsoller utgitt av Microsoft
 }
 
 
