--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -238,7 +238,7 @@ en kriger. Bildet vil også være synlig for de spillerne man spiller mot
 under et spill. Man begynner med et default profilbilde, og etterhvert
 som man vinner mange spill får man muligheten til å endre dette bilde.
 Målet med dette er å gi spilleren en visuell prestasjonspremie, i
-tillegg får de spillerne man spiller mot en idè om hvor mye motspilleren
+tillegg får de spillerne man spiller mot en idé om hvor mye motspilleren
 har spilt spillet tidligere.
 % This is where a description of the user’s control of the game can be
 %placed.
