--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Resultat}\label{sec:conclusion}
 Denne seksjonen belyser samfunnsnytten av spillet, og vil forklare hva
-som er tenkt rundt viderer arbeid.
+som er tenkt rundt videre arbeid.
 \subsection{Spillets samfunnsnytte}
 Garbage Alert har som mål å belyse nytten av gjenbruk og resirkulering, lokalt og globalt, gjennom et flerspiller dataspill (se seksjon \ref{sec:problemstilling}).
 
