--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -7,9 +7,9 @@ utvikle et spillkonsept og en eventuell prototype.
 \subsection{Struktur}
 Dokumentet er i hovedsak strukturert i 3 deler:
 \begin{enumerate}
-	\item Konsept og spillutforming (Avsnitt~\ref{sec:konsept})
-	\item Teknisk (Avsnitt~\ref{sec:teknisk})
-	\item Grafisk fremstilling (Avsnitt~\ref{sec:artwork})
+	\item Konsept og spillutforming (seksjon~\ref{sec:konsept})
+	\item Teknisk (seksjon~\ref{sec:teknisk})
+	\item Grafisk fremstilling (seksjon~\ref{sec:artwork})
 \end{enumerate}
 Konsept og spillutforming gir et innblikk i hvordan konseptet ble unnfanget og hvilke
 valg som lå til grunn for dette. I tillegg gir denne delen en overordnet
@@ -25,7 +25,7 @@ beskrevet.
 \begin{description}
 \item[Kjetil Mehl (23), datateknikk] \hfill \\
 Kjetil begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
-var det eventyr og rollespill (se Avsnitt~\ref{sec:genre}) som
+var det eventyr (se seksjon~\ref{sec:genre}) og rollespill som
 \gls{Legend of Zelda} og \gls{Banjo Kazooie} som
 stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
 konkurransespill som Counter-Strike og \gls{WC3}. Han har i hovedsak vært
@@ -33,7 +33,7 @@ en Nintendo~\gls{Fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
 
 \item[Ina Sander Pedersen (26), bioteknologi] \hfill \\
-I 1996 oppdaget Ina \gls{Rayman} til PC og var fra den dag frelst for
+I 1996 oppdaget Ina spillet \gls{Rayman} til PC og var fra den dag frelst for
 serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
 plattform vært en klar favoritt gjennom årene og da hun senere fikk
 \gls{Gameboy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
@@ -50,7 +50,7 @@ Senere gikk det i \gls{Legend of Zelda}  og \gls{SSBM}.
 \item[Andreas Røysland Aarnes (25), geologi] \hfill \\
 Som seksåring prøvde Andreas \gls{Super Mario World} på
 \gls{SNES} for første gang, og det var ikke før
-i 2011, da New Super Mario Bros. Wii kom til
+i 2011, da New Super Mario Bros. kom til
 \gls{Wii}, at han igjen ble tilfredstilt innen
 spillverdenen. I mellomtiden har han låst seg til strategispill-seriene
 \gls{WC3}, \gls{C and C} og Age of
@@ -60,15 +60,22 @@ Empires.
 Trond Kjetil startet tidlig sin spillkarriere med Nintendo Entertainment System og Super Mario Bros. i 1990, knapt 4 år gammel. TV-spill var fra da av et fast inventar i hans fritidssysler. Senere kom maskiner som Game Boy, Nintendo 64 og PC. I dag spiller han helst førstepersonsskytere på PC, da helst Team Fortress 2 og Tribes Ascend.
 \end{description}
 
+\subsection{Gruppens kompetanse}
+
+Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning, henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
+Ina har sin bakgrunn i bioteknologi fra NTNU, og Andreas' bakgrunn stammer fra petroleumsgeologi, også fra NTNU.
+Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
+Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper. Da vi har valgt å holde gruppestrukturen så flat som mulig databakgrunnen, hvor hans hovedkompetanse ligger, blitt lagt mest vekt på.
+
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
 gruppemedlem følte eierskap til både som et interesseområde og hvor hver person får brukt sin faglige kompetanse. Målet skulle også være konformt med den valgte
-problemstillingen (se avsnitt~\ref{sec:problemstilling}). En prototype i
+problemstillingen (se seksjon~\ref{sec:problemstilling}). En prototype i
 tillegg til dette ville bli en bonus i forhold til målet.
 
 \subsection{Problemstilling}
 \label{sec:problemstilling}
-Dette avsnittet vil ta for seg den valgte problemstillingen og hva som
+Denne seksjonen vil ta for seg den valgte problemstillingen og hva som
 lå til grunn for dette valget.
 \subsubsection{Valg av problemstilling}
 En av de største begrensningene i selve oppgaven var at
@@ -77,8 +84,8 @@ om resirkulering og gjenbruk. Etter flere diskusjoner og idémyldringer ble grup
 enig om at det var ønskelig å lage et flerspiller-dataspill.
 Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
-deretter bake inn grunnstenene i problemstillingen (resirkulering og
-redusert forbruk), ble problemstillingen forfattet.
+deretter bake inn grunnstenene, resirkulering og
+gjenbruk, ble problemstillingen forfattet.
 \subsubsection{Problemstillingen}\label{sec:problemstilling}
 Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 \begin{quotation}
@@ -87,12 +94,12 @@ Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 Denne problemstillingen gjør det mulig å flette inn kompetansen til de
 ulike medlemmene i spillet. De som har studert data får brukt
 kompetansen sin på et overordnet nivå når det gjelder selve utviklingen.
-Ved å ha med ``gjenbruk og resirkulering'' kan vi lage et spill med
-grunnlag i biologi og kjemiske prosesser. I tillegg åpner det opp for å
+Ved å ha med ''gjenbruk og resirkulering'' kan vi lage et spill med
+grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å
 ha med spillelementer basert på mineraler og ressurser, som vi har
 kompetanse på gjennom geologiutdanning.
 \subsection{Prosessen}
-Dette avsnittet forteller hvordan konseptet ble til ved å gå fra en
+Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en
 problemstilling, til en idé og til slutt et konsept. Den første delen av
 denne prosessen var ikke iterativ, ettersom gruppen i praksis gikk fra
 en vagt definert problemstilling, til en idé, for så å redefinere ideen
@@ -102,7 +109,7 @@ fra idé til konsept.
 Det ble brukt mye tid på å utforske forskjellige ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
 problemstillingen, og eksperimenterte derfor med forskjellige ideer.
-Gitt problemstillingen i avsnitt~\ref{sec:problemstilling} var det
+Gitt problemstillingen i seksjon~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
 flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette skapte vi vår første idé.
 \begin{description}
@@ -110,7 +117,7 @@ flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ette
 Spillere skal organisere hver sin lille by, hvor fokuset er å forhandle
 med hverandre på grunnlag av hvilke energitype de forskjellige byene
 velger å gå for. En by som for eksempel fokuserer på kull kan raskt få
-mye resurser, men ville påvirke sitt eget miljø lokalt, og senere hele
+mye ressurser, men ville påvirke sitt eget miljø lokalt, og senere hele
 miljøet globalt.
 \end{description}
 Etter tilbakemeldinger fra landsbylederen viste deg seg derimot at ideen
@@ -126,22 +133,16 @@ videre:
 \end{itemize}
 \subsubsection{Redefinering av ideen}
 Den opprinnelige ideen utviklet seg dermed til et rent konkurransespill,
-med mindre fokus på sanking og gjenbruk av resurser. For å minske
-ressursfokuset ble det bestemt at hver øy er en "søppeløy", og målet til
-spilleren er å fjerne alt søppelet på sin øy.  Ressurser blir utvinnet
+med mindre fokus på sanking og utvinning, og mer fokus på gjenbruk av ressurser. 
+Det ble bestemt at hver øy skal starte som en "søppeløy", og målet til
+spilleren er å fjerne alt søppelet på sin øy.  Ressurser blir anskaffet
 ved å resirkulere søppelet på øya. Ved å legge inn denne varianten ble
 ideen mer konform med problemstillingen. Energispillet med
-flerspillermodus hadde en meget stor grad av geoteknologi, geologi, samt
-bioteknologi. Ettersom fokuset ble vendt mer mot problemstillingen,
-forsvant disse fagområdene fra spillet. Andreas og Ina fant en løsning
+flerspillermodus hadde en meget stor grad av geoteknologi og
+bioteknologi. Ettersom fokuset i spillet ble endret,
+forsvant disse sentrale fagområdene. Andreas og Ina fant en løsning
 på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se
-avsnitt~\ref{sec:hazards})
+seksjon~\ref{sec:hazards})
 
 
 
-\subsection{Gruppens kompetanse}
-
-Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning, henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
-Ina har sin bakgrunn i bioteknologi fra NTNU, og Andreas' bakgrunn stammer fra petroleumsgeologi, også fra NTNU.
-Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
-Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har valgt å holde gruppestrukturen så flat som mulig, har ikke dette kommet særlig frem.
