--- a/prosessrapport/avslutning.tex
+++ b/prosessrapport/avslutning.tex
@@ -47,8 +47,8 @@ tilbakemeldinger på hvordan gruppen faktisk har oppfattet han. Denne
 klart noe han vil ta med seg videre, og forhåpentligvis få brukt i en
 livs- og arbeidssituasjon.
 
-\item[Trond] \hfill \\
-TROND HAR DU NOEN ERFARINGER DU VIL DELE MED RESTEN AV KLASSEN!?
+\item[Trond Kjetil] \hfill \\
+Trond Kjetil har vært veldig positivt overrasket
 
 \end{description}
 Alle i gruppen føler at de gjennom prosessen har blitt hørt slik at hvert medlem føler eierskap og er stolt av det ferdige produktet. 
