fiksa sidetall opplegget

--- a/prosessrapport/abstract.tex
+++ b/prosessrapport/abstract.tex
@@ -1,7 +1,8 @@
-\begin{abstract}
-\emph{Garbage Alert} er et spill som har som mål å opplyse
+\begin{abstract} \vspace{7cm} \noindent \pagenumbering{Roman}
+\\\\\\\\\\
+\emph{Garbage Alert er et spill som har som mål å opplyse
 mennesker om viktigheten av resirkulering og gjenbruk. Dette gjøres
 ved å abstrahere konseptet som er utviklet. En stor del av faget går ut på hvordan beslutninger
 og samarbeid har foregått innad i gruppen. Denne rapporten vil beskrive
-de mest sentrale situasjonene gruppen har hatt under prosessen, samt teori, refleksjoner og aksjoner knyttet til dette. 
+de mest sentrale situasjonene gruppen har hatt under prosessen, samt teori, refleksjoner og aksjoner knyttet til dette.}
 \end{abstract}
