--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -1,4 +1,4 @@
-\section{Innledning}
+\section{Innledning} \pagenumbering{arabic}
 Denne rapporten vil utlede en beskrivelse av samarbeidet innad i en gruppe studenter, som et ledd i kurset \emph{Eksperter i Team} (herunder EiT), i landsbyen \emph{EiT3014: En spillverden på ett semester}.
 
 \subsection{Eksperter i Team} Målet i Eksperter i Team er at studentene
