--- a/konseptdokument/title.tex
+++ b/konseptdokument/title.tex
@@ -1,5 +1,4 @@
 % This template from http://www.vel.co.nz
-
 \begin{titlepage}
 
 \begin{center}
@@ -33,9 +32,8 @@ Ina Sander \textsc{Pedersen}\\ [3cm]
  
 % Bottom of the page
 
-{\large \today}\\[4cm] % \today inputs the current date, can be changed to any other date
+{\large 2. mai 2012}\\[4cm] % \today inputs the current date, can be changed to any other date
  
 \vfill
 \end{center}
-
 \end{titlepage}
