--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -156,7 +156,7 @@ Når en øy er helt overfylt med søppel vil den synke ned i havet. Dette gjør 
 
 \subsection{Gameplay og taktikker}
 
-I dette avsnittet tar vi for oss et typisk spill, spilt av tre tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
+I dette avsnittet tar vi for oss et typisk spill, spilt av tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
 
 De tre deltakerne i spillet er: \emph{Professor}; \emph{MadMax}; og \emph{N00b87}. Spillet starter og hver spiller ser på en mørk øy fylt til randen av søppel. Det er en dyster og melankolsk stemning, og man får en følelse av at man har reist fram i tid til et post-apokalyptisk samfunn.
 
