--- a/konseptdokument/glossaries.tex
+++ b/konseptdokument/glossaries.tex
@@ -13,15 +13,14 @@
 	Platformspill til Nintendo 64, utgitt av Rare i 1998
 }
 \dictentry{Legend of Zelda}{
-	Brukt om The Legend of Zelda Ocarina of Time, eventyrspill utgitt
-til Nintedo 64 i 1998
+	The Legend of Zelda, en eventyrspillserie utgitt av Nintendo. Første spill til NES i 1986. Oppfølgeren The Legend of Zelda: Ocarina of Time, kanskje det mest populære spillet i serien, utgitt til Nintendo 64 i 1998
 }
 \dictentry{Fanboy}{Fanboy er et engelsk begrep som brukes for å beskrive et individ som
 er dedikert til et enkeltobjekt på en emosjonell eller fanatisk måte,
 ofte til et punkt der det kan beskrives som tvangslidelse
 }
 \dictentry{Energispillet}{
-	Et energispill for å lære om energi, miljø og klima
+	Et energispill for å lære om energi, miljø og klima, utviklet av CyberLab
 }
 \dictentry{Advance Wars}{
 	Strategispill orginalt utgitt til Game Boy Advance
@@ -32,22 +31,21 @@ ofte til et punkt der det kan beskrives som tvangslidelse
 \dictentry{WC3}{
 	Warcraft III, sanntidsstrategispill utgitt av Blizzard i 2002
 }
-\dictentry{Gameboy}{
+\dictentry{Game Boy}{
 	Benevnelse brukt om serien av handholdte konsoller utgitt av
 Nintendo
 }
 \dictentry{DKC2}{
-	Donkey Kong Country Country 2
+	Donkey Kong Country Country 2, et plattformspill til SNES, utgitt i 1995
 }
 \dictentry{SSBM}{
-	Super Smash Brothers, et slossespill utgitt til, og av Nintendo 64 i
-1999
+	Super Smash Brothers Melee, et slossespill, med de kjente Nintendo-figurene. Første spillet i serien utgitt til Nintendo GameCube i 2002
 }
 \dictentry{Diablo 2}{
 	Et hack and slash action-rollespill, utgitt av Blizzard i 2000
 }
 \dictentry{Mario 64}{
-	Det første Mariospillet til Nintendo 64, utviklet og utgitt av
+	Det første Mario-spillet til Nintendo 64, utviklet og utgitt av
 Nintendo i 1996
 }
 \dictentry{Mario Kart}{
@@ -58,23 +56,21 @@ Det første spillet kom til NES i 1992
 	Monkey Island, en serie med med eventyrspill i pek-og-klikk
 sjangeren. Produsert av LucasArts
 }
-\dictentry{Den lengste reisen}{
+\dictentry{Den Lengste Reisen}{
 	Eventyrspill laget og utgitt av norske Funcom i 1999
 }
 \dictentry{Bastion}{
-	Et action-rollespill produsert av selskapet ``independent developer
-Supergiant Games''. Ble sluppet i 2011 til Xbox Arcade
+	Et action-rollespill produsert av selskapet Supergiant Games. Ble sluppet i 2011 til Xbox Arcade, senere og til PC
 }
 \dictentry{Civilization}{
 	Et turbasert strategispill i utgangspunktet utgitt til DOS i 1991. Ble
 senere en serie og er nå i sin 5. generasjon
 }
 \dictentry{Starcraft}{
-	``Real time strategy'' utgitt av Blizzard i 1998. Satt virkelig
-lista for denne typen spill. Det kom en oppfølger i 2010
+	Sanntidsstrategispill utgitt av Blizzard i 1998
 }
 \dictentry{C and C}{
-	Command and Conquer, strategispill først utgitt til PC
+	Command \& Conquer, strategispill først utgitt til PC
 }
 \dictentry{Tekken}{
 	Et japansk kampsportspill utviklet av Namco og orginalt gitt ut til
@@ -84,12 +80,11 @@ Playstation
 	Nintendo Wii, Nintendos siste spillkonsoll
 }
 \dictentry{NES}{
-	Nintendo Entertainment System – 8bits spillkonsoll utgitt av
-Nintendo i 1986 (Europa)
+	Nintendo Entertainment System – 8 bits spillkonsoll utgitt av
+Nintendo i 1986
 }
 \dictentry{GBA}{
 	En av de håndholdte spillkonsollene utgitt av Nintendo i 2001
-(Europa)
 }
 \dictentry{Xbox}{
 	En serie spillkonsoller utgitt av Microsoft
