Set "norsk" the correct way?

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -36,7 +36,7 @@ kolleksjonen til å omfatte Xbox.
 I 1996 oppdaget Ina spillet \gls{Rayman} til PC og var fra den dag frelst for
 serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
 plattform vært en klar favoritt gjennom årene og da hun senere fikk
-\gls{Gameboy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
+\gls{Game Boy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
 Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper,
 men Rayman og Donkey Kong seriene er og blir favoritter. 
 
