--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -95,7 +95,7 @@ Blant de mer sentrale elementer ved sanntidsstrategispill er konseptene om ressu
 \subsubsection{Vårt valg}
 Helt i starten av prosessen som førte til Garbage Alert, begynte vi med å diskutere ulike typer eventyr-tilnærminger. Det føltes svært naturlig, i et spill som skal omhandle resirkulering og gjenbruk, å låne elementer fra den sjangeren som oftest benytter slike mekanismer. Enkelte gruppemedlemmer ønsket dog en mer fartsfull opplevelse, og diskusjoner om å implementere Zelda-aktige elementer i spillet ble tatt opp.
 
-Samtidig ble en alternativ idé utforsket, i kraft av at enkelte ønsket å inkorporere flerspiller og konkurranse som en motivasjonsfaktor. Her startet ideen med å skape et brettspill-inspirert spill. Denne ideen utviklet seg fra å være et svært komplisert turbasert spill til å bli stadig enklere, og stadig raskere, fram til det Garbage Alert til slutt skulle bli; et sanntidsstrategispill.
+Samtidig ble en alternativ idé utforsket, i kraft av at enkelte ønsket å inkorporere flerspiller og konkurranse som en motivasjonsfaktor. Her startet ideen med å skape et brettspill-inspirert spill. Denne ideen utviklet seg fra å være et svært komplisert turbasert spill, til å bli stadig enklere og raskere, for til slutt å bli et sanntidsstrategispill.
 
 \input{definisjoner}
 \input{spillelement}
