--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -2,20 +2,20 @@
 % Definitions should include how a player wins, loses, passes levels and
 % the main focus of the game play.
 \subsection{Definisjoner}
-Dette avsnittet forklare de grunnleggende definisjonene rundt Garbage
+Denne seksjonen forklarer de grunnleggende definisjonene rundt Garbage
 Alert. Definisjonene er i hovedsak sentrert rundt hvordan spilleren
 oppfatter spillet, og på hvilke måter spilleren kan påvirke dynamikken.
 \subsubsection{Oppstart}
 Alle deltagende spillere starter med like forutsetninger. Dette er en øy
-fylt til randen av søppel og en miljøstasjon. For å få fatt i ressurser
-(som muliggjør utvikling), må spilleren resirkulere søppelet.  Hvordan
+fylt til randen av søppel og en miljøstasjon. For å få fatt i ressurser, 
+som muliggjør utvikling på øya, må spilleren resirkulere søppelet.  Hvordan
 spilleren velger å bruke de nyervervede ressursene ligger til grunn for
 hvilken strategi spilleren velger å gå for.
 \subsubsection{Hvordan vinne}
 I Garbarge Alert er det to måter å vinne på. En spiller har vunnet
 dersom alle motstandere har blitt nøytralisert. I tillegg kan en spiller
 vinne dersom han er først ute med å rydde sin øy for søppel.  Ved å
-innføre to ulike måter belønner vi ulike taktikker, nemlig en offensiv
+innføre to ulike måter å vinne på belønner vi ulike taktikker, nemlig en offensiv
 taktikk (gå for angrep), og en defensiv (gå for forsvar).  Spillets
 mangfold blir først demonstrert om den spiller velger å kombinere
 taktikkene.
