--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -205,7 +205,7 @@ og miljøstasjonene deres.
 \item \textbf{Forsvar}\\Forsvaret kan bli angrepet og ødelagt av våpen.
 En spiller bygger forsvaret, derfor koblingen mellom spiller og forsvar.
 \item \textbf{Oppgraderinger}\\Spilleren kan oppgradere miljøstasjonen
-sin. Desse oppgraderingene baserer seg på statusen til miljøstasjonen.
+sin. Disse oppgraderingene baserer seg på statusen til miljøstasjonen.
 \end{description}
 % Make a list of all objects that affect the player in a positive way.
 % (i.e. health replenished)
