--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -23,7 +23,7 @@ De forskjellige typene gjenvinnbare ressurser er:
 \begin{description}
 	\item \textbf{Papp}\\ Denne ressursen kan gjenvinnest uten å måtte oppgradere miljøstasjonen. Dette er den enkleste ressursen å få fatt i, men skaper kun relativt svake angrep/forsvar.
 	\item \textbf{Plast}\\ Denne ressursen kan man gjenvinne etter å ha oppgradert hovedbasen én gang.
-	\item \textbf{Tre}\\ Tre kan gjenvinnest dersom hovedbasen har blitt oppgradert til dette. Tre er på samme oppgraderingsnivå som plast, med andre ord må spilleren velge mellom desse to i begynnelsen. Tre er derimot hardere enn plast i dette spillet.
+	\item \textbf{Tre}\\ Tre kan gjenvinnest dersom hovedbasen har blitt oppgradert til dette. Tre er på samme oppgraderingsnivå som plast, med andre ord må spilleren velge mellom disse to i begynnelsen. Tre er derimot hardere enn plast i dette spillet.
 	\item \textbf{Jern}\\ Jern er mulig å gjenvinne dersom spilleren først oppgraderer til tre.
 	\item \textbf{Stål}\\ Stål bygger på at spilleren først har oppgradert til plast.
 	\item \textbf{Titan}\\ Titan er den siste ressursen som er mulig å gjenvinne. For å få tak i denne ressursen må spilleren først ha skaffet seg \emph{alle} gjenvinningsutvidelsene til hovedbasen.
