--- a/konseptdokument/glossaries.tex
+++ b/konseptdokument/glossaries.tex
@@ -80,7 +80,7 @@ Playstation
 	Nintendo Wii, Nintendos siste spillkonsoll
 }
 \dictentry{NES}{
-	Nintendo Entertainment System – 8 bits spillkonsoll utgitt av
+	Nintendo Entertainment System, 8 bits spillkonsoll utgitt av
 Nintendo i 1986
 }
 \dictentry{GBA}{
