--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -70,8 +70,7 @@ Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss a
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
 gruppemedlem følte eierskap til både som et interesseområde og hvor hver person får brukt sin faglige kompetanse. Målet skulle også være konformt med den valgte
-problemstillingen (se seksjon~\ref{sec:problemstilling}). En prototype i
-tillegg til dette ville bli en bonus i forhold til målet.
+problemstillingen (se seksjon~\ref{sec:problemstilling}). Det å kunne produsere en fungerende prototype i tillegg til dette ville bli en bonus i forhold til målet.
 
 \subsection{Problemstilling}
 \label{sec:problemstilling}
@@ -84,8 +83,8 @@ om resirkulering og gjenbruk. Etter flere diskusjoner og idémyldringer ble grup
 enig om at det var ønskelig å lage et flerspiller-dataspill.
 Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
-deretter bake inn grunnstenene, resirkulering og
-gjenbruk, ble problemstillingen forfattet.
+deretter bake inn grunnstenene — resirkulering og
+gjenbruk — ble problemstillingen forfattet.
 \subsubsection{Problemstillingen}\label{sec:problemstilling}
 Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 \begin{quotation}
@@ -94,7 +93,7 @@ Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 Denne problemstillingen gjør det mulig å flette inn kompetansen til de
 ulike medlemmene i spillet. De som har studert data får brukt
 kompetansen sin på et overordnet nivå når det gjelder selve utviklingen.
-Ved å ha med ''gjenbruk og resirkulering'' kan vi lage et spill med
+Ved å ha med "gjenbruk og resirkulering" kan vi lage et spill med
 grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å
 ha med spillelementer basert på mineraler og ressurser, som vi har
 kompetanse på gjennom geologiutdanning.
